force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/Resident_Fellow_HCF_Relationship__c.object-meta.xml
<CustomObject>
    <label>Resident/Fellow Relationship</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resident/Fellow Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>