force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Academic_Program_City__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Academic Program City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>