force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Academic_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Program Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Academic Programs</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resident/Fellow Relationships</relationshipLabel>
    <relationshipName>Resident_Fellow_Relationships3</relationshipName>
    <type>Lookup</type>
</CustomField>