force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Alternate_email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternate email</label>
    <type>Email</type>
</CustomField>