force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Completion_date__c.field-meta.xml
<CustomField>
    <fullName>Completion_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion date</label>
    <type>Date</type>
</CustomField>