force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Destination_Territory__c.field-meta.xml
<CustomField>
    <fullName>Destination_Territory__c</fullName>
    <label>Destination Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boneafide Orthopaedics, Inc.</fullName>
            </value>
            <value>
                <fullName>Case Medical</fullName>
            </value>
            <value>
                <fullName>Joint Medical Concepts</fullName>
            </value>
            <value>
                <fullName>Legacy Orthopedic, Inc.</fullName>
            </value>
            <value>
                <fullName>Midark Surgical Inc.</fullName>
            </value>
            <value>
                <fullName>Osteo1, Inc.</fullName>
            </value>
            <value>
                <fullName>Select Orthopedics, Inc.</fullName>
            </value>
            <value>
                <fullName>Summit Surgical</fullName>
            </value>
            <value>
                <fullName>Test Distributor Account</fullName>
            </value>
            <value>
                <fullName>ZB APEX Surgical</fullName>
            </value>
            <value>
                <fullName>ZB Chicago</fullName>
            </value>
            <value>
                <fullName>ZB Southeast</fullName>
            </value>
            <value>
                <fullName>ZBOne</fullName>
            </value>
            <value>
                <fullName>ZBWisco Inc</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Alaska</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Bay Area</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Capital</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Carolinas</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Colorado</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Davis</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Downstate New York</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Fegan, Inc.</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Great Lakes</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Heartland-Omaha</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Hibbard</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Holzbach</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Indiana</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Mid-Ohio</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet MidAmerica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>