force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Direct_Rep_Contact__c.field-meta.xml
<CustomField>
    <fullName>Direct_Rep_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direct Rep Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>