force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resident/Fellow Relationships (Distributor Name)</relationshipLabel>
    <relationshipName>Resident_Fellow_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>