force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Fellows_Name__c.field-meta.xml
<CustomField>
    <fullName>Fellows_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellows Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>