force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Fellowship__c.field-meta.xml
<CustomField>
    <fullName>Fellowship__c</fullName>
    <label>Fellowship</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adult Recon</fullName>
            </value>
            <value>
                <fullName>Foot and Ankle</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Hand and Elbow</fullName>
            </value>
            <value>
                <fullName>Hand and Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Hand and Upper Extremities</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Shoulder and Elbow</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Sports Medicine and Upper Extremities</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>