force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Fellowship_Director__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Director__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellowship Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>