force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/HCF_Name__c.field-meta.xml
<CustomField>
    <fullName>HCF_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Healthcare Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resident/Fellow Relationships</relationshipLabel>
    <relationshipName>Resident_Fellow_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>