force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Hospital_Practice__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Practice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital/Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>