force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Job_Secured__c.field-meta.xml
<CustomField>
    <fullName>Job_Secured__c</fullName>
    <label>Job Secured?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>