force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Other_Academic_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Academic_Program_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If Academic Program is not present then provide this details</inlineHelpText>
    <label>Other Academic Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>