force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Program_Year_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Year_Date__c</fullName>
    <formula>IF(

 OR(
    AND (MONTH(DATEVALUE(CreatedDate)) &gt; 6,
    YEAR(DATEVALUE(CreatedDate)) ==  YEAR(TODAY())-1,
    OR(YEAR(Completion_date__c) ==  YEAR(TODAY()),
    YEAR(Completion_date__c) ==  YEAR(TODAY())+1)
    ),
  
    AND(MONTH(DATEVALUE(CreatedDate)) &lt;=6,
    YEAR(DATEVALUE(CreatedDate)) ==  YEAR(TODAY()),
    OR(YEAR(Completion_date__c) ==  YEAR(TODAY()),
    YEAR(Completion_date__c) ==  YEAR(TODAY())+1)
    )
 )   
, 
TRUE, 
FALSE
)</formula>
    <label>Program Year Date</label>
    <type>Checkbox</type>
</CustomField>