force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Residency_location__c.field-meta.xml
<CustomField>
    <fullName>Residency_location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Residency location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>