force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fellowship</fullName>
            </value>
            <value>
                <fullName>Fellows</fullName>
            </value>
            <value>
                <fullName>Residency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>