force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/fields/ZB_Product_Trained__c.field-meta.xml
<CustomField>
    <fullName>ZB_Product_Trained__c</fullName>
    <label>ZB Product Trained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>