force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/validationRules/Fellowship_2_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fellowship_2_Validation</fullName>
    <active>true</active>
    <description>Fellowship_2_Validation</description>
    <errorConditionFormula>ISBLANK( Fellowship__c ) &amp;&amp;  ISBLANK( Other_Fellowship__c )</errorConditionFormula>
    <errorMessage>Please provide Fellowship type</errorMessage>
</ValidationRule>