force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/validationRules/Fellowship_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fellowship_Validation</fullName>
    <active>true</active>
    <description>Fellowship_Validation - IF Academic program is blank please fill other column</description>
    <errorConditionFormula>ISBLANK(Academic_Program_Name__c) &amp;&amp;  ISBLANK( Other_Academic_Program_Name__c )</errorConditionFormula>
    <errorMessage>Please provide Academic Program Name</errorMessage>
</ValidationRule>