force-app/main/default/objects/Resident_Fellow_HCF_Relationship__c/validationRules/Job_Secured_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Secured_Validation</fullName>
    <active>true</active>
    <description>Job_Secured_Validation</description>
    <errorConditionFormula>ISPICKVAL( Job_Secured__c , &quot;Yes&quot;) &amp;&amp; ( ISBlank(City__c) ||   ISPICKVAL(State__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>Please provide provide Job City and State.</errorMessage>
</ValidationRule>